<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_account"
        android:icon="@drawable/ic_account_box_black_24dp"
        android:orderInCategory="100"
        android:title="@string/action_account"
        android:visible="true"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:orderInCategory="200"
        android:title="@string/action_settings"
        android:visible="true"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/ic_exit_to_app_black_24dp"
        android:orderInCategory="3000"
        android:title="@string/action_logout"
        android:visible="true"
        app:showAsAction="ifRoom" />

</menu>
